# rust-staticlib-duplicate-symbols-test

./: build.sh  c.c  d.cpp
a/: Cargo.toml
a/src/: lib.rs
b/: Cargo.toml
b/src/: lib.rs
c/: Cargo.toml
c/src/: lib.rs
zz/: Cargo.toml
zz/src/: lib.rs
